# vglib_examples

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
data/bezier/: teapot.bpt  teaspoon.bpt
data/shaders/: gltf_impl.glsl  terrain_lod.glsl
data/shaders/raytrace_basic/: miss.rmiss.glsl
dependencies/: CMakeLists.txt
dependencies/openvdb/: CMakeLists.txt  dumm.cpp
dependencies/openvdb/include/openvdb/: version.h
dependencies/openvdb/include/openvdb/tools/: RayTracer.h
examples/: CMakeLists.txt  imgui.ini  out.ppm
examples/Cloth/source/: ClothDemo.cpp
examples/Demo/source/: Demo.cpp
examples/MarchingCubes/: CMakeLists.txt
examples/MarchingCubes/shaders/: march.comp  noise.glsl  sdf.comp
examples/MarchingCubes/source/: MarchingCubeDemo.cpp
examples/Playground/: CMakeLists.txt  add_ts_vectors.h  nishita.hpp  playground.cpp  render_opts.hpp  shader_reflect.hpp  spirv_reflect.h  vdb_render.hpp
examples/Playground/shaders/: shader.vert
examples/RayTracerDemo/Source/: RayTracerDemo.cpp
examples/RayTracingImplicits/source/: RayTracingImplicits.cpp
examples/VulkanCube/: CMakeLists.txt
examples/VulkanCube/source/: VulkanCube.cpp
examples/atmospheric_scattering/source/: AtmosphericScattering.cpp
examples/atmospheric_scattering2/include/: AtmosphereGenerator.hpp  AtmosphericScattering2.hpp
examples/atmospheric_scattering2/shaders/: atmosphere_api.glsl  atmosphere_descriptor.glsl  atmosphere_lib.glsl  atmosphere_lut.glsl  atmosphere_meta_data.glsl  atmosphere_model.glsl  compute_direct_irradiance.comp  compute_indirect_irradiance.comp  compute_multiple_scattering.comp  compute_scattering_density.comp  compute_single_scattering.comp  compute_transmittance.comp  preview.frag
examples/atmospheric_scattering2/source/: AtmosphereDescriptor.cpp  AtmosphereGenerator.cpp  AtmosphericScattering2.cpp
examples/bindless_descriptors/: CMakeLists.txt
examples/bindless_descriptors/include/: BindLessDescriptorsDemo.hpp
examples/bindless_descriptors/shaders/: render.frag  render.vert  render2.frag  sponza.frag
examples/bindless_descriptors/source/: BindLessDescriptorsDemo.cpp
examples/bulletphysicsdemo/source/: BulletPhysicsDemo.cpp
examples/cascade_shadow_map/: CMakeLists.txt
examples/cascade_shadow_map/include/: CascadeShadowMapDemo.hpp
examples/cloth2/: CMakeLists.txt
examples/cloth2/include/: Cloth.hpp  (+4 more)
examples/collision2d/: CMakeLists.txt  README.md
examples/common/: CMakeLists.txt
examples/common/include/: Animation.hpp  AppContext.hpp  AsyncModelLoader.hpp  Bloom.hpp  CascadeShadowMap.hpp  Condition.hpp  FFT.hpp  FixedUpdate.hpp  Floor.hpp  L2DFileDialog.h  Lock.hpp  NormalMapping.hpp  ObjectPool.hpp  Offscreen.hpp  PointShadowMap.hpp  RingBuffer.hpp  ShadowMap1.hpp  Volume.hpp  Voxel.hpp  mp4.hpp  mp4_parser.hpp  vol_loader.hpp
examples/common/include/cbt/: cbt.h  cbt.hpp
examples/common/include/concurrency/: BlockingQueue.hpp  Condition.hpp
examples/common/include/gltf/: GltfLoader.hpp  GltfLoader2.hpp  StagingBuffer.hpp  gltf.hpp  gltf2.hpp
examples/common/include/leb/: leb.h  leb.hpp
examples/common/shaders/: apply_mask.comp  atmosphere.frag  atmosphere.vert  blend.comp  cascade_shadow_map.frag  cascade_shadow_map_debug.frag  fft_butterfly.comp  fft_copy.comp  floor.frag  gltf.glsl  gltf.vert  gltf_cascade_shadow_map.vert  gltf_point_shadow_map.vert  lighting.glsl  mask.comp  normal_mapping.comp  pattern.glsl  point_shadow_map.frag  point_shadow_map.vert  point_shadow_map_debug.frag  shadow.glsl  solid.vert  wireframe.frag  wireframe.vert
examples/common/src/: AppContext.cpp  AsyncModelLoader.cpp  Bloom.cpp  CascadeShadowMap.cpp  FFT.cpp  Floor.cpp  GltfLoader.cpp  GltfLoader2.cpp  NormalMapping.cpp  PointShadowMap.cpp  ShadowMap1.cpp  StagingBuffer.cpp  Volume.cpp  cbt.cpp  gltf.cpp  gltf2.cpp  gltf_loader.cpp  leb.cpp  mp4.cpp  mp4_parser.cpp
examples/cube_fractal/: CMakeLists.txt
examples/fft_ocean/: CMakeLists.txt
examples/fluid_simulation2/: CMakeLists.txt
examples/gltf_viewer/: CMakeLists.txt  README.md
examples/longest_edge_bisection/: CMakeLists.txt  imgui.ini
examples/marching_cubes2/: CMakeLists.txt  README.md
examples/mesh_shading/: CMakeLists.txt
examples/ominidirectional_shadow_map/: CMakeLists.txt
examples/ominidirectional_shadow_map2/: CMakeLists.txt
examples/ominidirectional_shadow_map2/include/: OminidirectionalShadowMapDemo.hpp
examples/ominidirectional_shadow_map2/shaders/: render.frag
examples/ominidirectional_shadow_map2/source/: OminidirectionalShadowMapDemo.cpp
examples/open_vdb_viewer/: CMakeLists.txt
examples/open_vdb_viewer/include/: OpenVdbViewer.hpp  VdbAnimation.hpp
examples/open_vdb_viewer/shaders/: delta_tracking.frag  path_tracing.frag  ray_marcher.frag  slice.frag
examples/open_vdb_viewer/source/: OpenVdbViewer.cpp  VdbAnimation.cpp
examples/path_tracer/: CMakeLists.txt
examples/photon_mapping/: CMakeLists.txt
examples/physical_simulation/: CMakeLists.txt
examples/planet/: CMakeLists.txt
examples/project_template.g8/: CMakeLists.txt
examples/space_partitioning/: CMakeLists.txt
examples/sph2d/: CMakeLists.txt
examples/subgroup_eval/: CMakeLists.txt
examples/temporal_anti_aliasing/: CMakeLists.txt
examples/terrain_marching_cube/: CMakeLists.txt  draw_indirect_commands.csv  draw_indirect_commands2.csv
examples/test_graphics/: CMakeLists.txt
examples/video_playback/: CMakeLists.txt
examples/volume_rendering2/: CMakeLists.txt
examples/volume_rendering2/include/: VolumeRendering2.hpp
examples/volume_rendering2/shaders/: common.glsl  fog.frag  integrate.frag  integrate_dt.frag  level_set.frag  volume.vert
examples/volume_rendering2/source/: VolumeRendering2.cpp
examples/volumetric_fog/: CMakeLists.txt
examples/volumetric_integration/: CMakeLists.txt
examples/voronoi/: CMakeLists.txt
examples/voxelization/: CMakeLists.txt
examples/wave_function_collapse/: CMakeLists.txt
examples/weighted_voronoi_stippling/: CMakeLists.txt
path_tracer/models/: cornell_box.mtl
realtime_clouds/: image.tga
(+427 files in other folders)
